# plasma-quota

./: CMakeLists.txt
applets/: CMakeLists.txt
applets/diskquota/: CMakeLists.txt
applets/diskquota/package/contents/ui/: ListDelegateItem.qml
applets/diskquota/plugin/: qmldir
applets/lliurexquota/: CMakeLists.txt  Messages.sh
applets/lliurexquota/package/: metadata.desktop
applets/lliurexquota/package/contents/ui/: ListDelegateItem.qml  main.qml
applets/lliurexquota/plugin/: LliurexDiskQuota.cpp  LliurexDiskQuota.h  LliurexQuotaItem.cpp  LliurexQuotaItem.h  LliurexQuotaListModel.cpp  LliurexQuotaListModel.h  lliurexDiskQuota.cpp  lliurexDiskQuota.h  lliurexQuotaItem.cpp  lliurexQuotaItem.h  lliurexQuotaListModel.cpp  lliurexQuotaListModel.h  plugin.cpp  plugin.h
debian/: changelog  control  copyright  plasma-widget-lliurex-quota.install  rules
po/: plasma_applet_org.kde.plasma.lliurexquota.pot  update_translations.sh
po/ca/: plasma_applet_org.kde.plasma.diskquota.po  plasma_applet_org.kde.plasma.lliurexquota.po
po/ca@valencia/: plasma_applet_org.kde.plasma.lliurexquota.po
po/en_GB/: plasma_applet_org.kde.plasma.diskquota.po  plasma_applet_org.kde.plasma.lliurexquota.po
po/es/: plasma_applet_org.kde.plasma.diskquota.po  plasma_applet_org.kde.plasma.lliurexquota.po
